added tuesday and wednesday schedule

--- a/activity1-profile_info.html
+++ b/activity1-profile_info.html
@@ -98,11 +98,33 @@
             <th>End</th>
         </tr>
         <tr>
-            <th>Teusday</th>
+            <th rowspan="3">Tuesday</th>
             <td>9:00 a.m</td>
             <td>10:30 a.m</td>
+            <td>Art Appreciation</td>
+        </tr>
+        <tr>
+            <td>10:30 a.m</td>
+            <td>12:00 p.m</td>
             <td>Linear Algebra</td>
         </tr>
+        <tr>
+            <td>12:30 p.m</td>
+            <td>2:30 p.m</td>
+            <td>Modern Biology</td>
+        </tr>
+        <tr>
+            <th rowspan="2">Wednesday</th>
+            <td>8:30 a.m</td>
+            <td>10:30 a.m</td>
+            <td>Computer Programming 2</td>
+        </tr>
+        <tr>
+            <td>10:30 a.m</td>
+            <td>12:30 p.m</td>
+            <td>Intoduction to Human Computer Interaction</td>
+        </tr>
+
     </table>
 
 </div>
