--- a/activity1-profile_info.html
+++ b/activity1-profile_info.html
@@ -124,6 +124,39 @@
             <td>12:30 p.m</td>
             <td>Intoduction to Human Computer Interaction</td>
         </tr>
+        <tr>
+            <th rowspan="3">Thursday</th>
+            <td>9:00 a.m</td>
+            <td>10:30 a.m</td>
+            <td>Art Appreciation</td>
+        </tr>
+        <tr>
+            <td>10:30 a.m</td>
+            <td>12:00 p.m</td>
+            <td>Linear Algebra</td>
+        </tr>
+        <tr>
+            <td>1:30 p.m</td>
+            <td>4:30 p.m</td>
+            <td>Modern Biology</td>
+        </tr>
+        <tr>
+            <th rowspan="2">Friday</th>
+            <td>7:30 a.m</td>
+            <td>10:30 a.m</td>
+            <td>Computer Programming 2</td>
+        </tr>
+        <tr>
+            <td>10:30 a.m</td>
+            <td>1:30 p.m</td>
+            <td>Intoduction to Human Computer Interaction</td>
+        </tr>
+        <tr>
+            <th>Saturday</th>
+            <td>1:30 p.m</td>
+            <td>6:30 p.m</td>
+            <td>Web Systems and Technologies</td>
+        </tr>
 
     </table>
 
