--- a/activity1-profile_info.html
+++ b/activity1-profile_info.html
@@ -13,8 +13,8 @@
 
 <div class="nav">
     <ul>
-        <li><a href="activity1-profile_info.html">HOME</a></li>
-        <li><a href="schedule.html">SCHEDULE</a></li>
+        <li><button><a href="activity1-profile_info.html">HOME</a></button></li>
+        <li><button><a href="schedule.html">SCHEDULE</a></button></li>
     </ul>
 </div>
 
