--- a/activity1-profile_info.html
+++ b/activity1-profile_info.html
@@ -11,6 +11,43 @@
 </head>
 <body>
 
+<div class="container">
+    <div class="bubbles">
+     <span style="--i:11"></span>
+     <span style="--i:12"></span>
+     <span style="--i:20"></span>
+     <span style="--i:18"></span>
+     <span style="--i:12"></span>
+     <span style="--i:15"></span>
+     <span style="--i:19"></span>
+     <span style="--i:13"></span>
+     <span style="--i:19"></span>
+     <span style="--i:15"></span>
+     <span style="--i:26"></span>
+     <span style="--i:12"></span>
+     <span style="--i:10"></span>
+     <span style="--i:11"></span>
+     <span style="--i:19"></span>
+     <span style="--i:17"></span>
+     <span style="--i:18"></span>
+     <span style="--i:12"></span>
+     <span style="--i:10"></span>
+     <span style="--i:13"></span>
+     <span style="--i:14"></span>
+     <span style="--i:15"></span>
+     <span style="--i:19"></span>
+     <span style="--i:20"></span>
+     <span style="--i:11"></span>
+     <span style="--i:12"></span>
+     <span style="--i:19"></span>
+     <span style="--i:15"></span>
+     <span style="--i:22"></span>
+     <span style="--i:15"></span>
+     <span style="--i:16"></span>
+     <span style="--i:10"></span>
+    </div>
+
+
 <div class="nav">
     <ul>
         <li><button><a href="activity1-profile_info.html">HOME</a></button></li>
@@ -22,8 +59,9 @@
 
     <img src="profile.jpg" alt="profile pic">
 
+    <h1 class="name">Pascual Bernard T. Benauro</h1>
     <table class="content" border="1">
-        <h1 class="name">Pascual Bernard T. Benauro</h1>
+        
         <tr class="info">
             <th>Address</th>
             <th>Zip Code</th>
@@ -39,12 +77,12 @@
     </table>
 
     <div class="background">
-    <h2 class="edu">Education</h2>
-    <ul class="education">
+     <h2 class="edu">Education</h2>
+      <ul class="education">
         <li>Elementary: Divine Word College of Bangued</li>
         <li>Junior Highschool: Divine Word College of Bangued</li>
         <li>Senior Highchool: Divine Word College of Bangued</li>
-    </ul>
+      </ul>
     </div>
 </div>
 
@@ -88,6 +126,6 @@
     </table>
 
 </div>
-    
+
 </body>
 </html>
