--- a/schedule.html
+++ b/schedule.html
@@ -11,10 +11,46 @@
 </head>
 <body>
 
+<div class="container">
+        <div class="bubbles">
+          <span style="--i:11"></span>
+          <span style="--i:12"></span>
+          <span style="--i:20"></span>
+          <span style="--i:18"></span>
+          <span style="--i:12"></span>
+          <span style="--i:15"></span>
+          <span style="--i:19"></span>
+          <span style="--i:13"></span>
+          <span style="--i:19"></span>
+          <span style="--i:15"></span>
+          <span style="--i:26"></span>
+          <span style="--i:12"></span>
+          <span style="--i:10"></span>
+          <span style="--i:11"></span>
+          <span style="--i:19"></span>
+          <span style="--i:17"></span>
+          <span style="--i:18"></span>
+          <span style="--i:12"></span>
+          <span style="--i:10"></span>
+          <span style="--i:13"></span>
+          <span style="--i:14"></span>
+          <span style="--i:15"></span>
+          <span style="--i:19"></span>
+          <span style="--i:20"></span>
+          <span style="--i:11"></span>
+          <span style="--i:12"></span>
+          <span style="--i:19"></span>
+          <span style="--i:15"></span>
+          <span style="--i:22"></span>
+          <span style="--i:15"></span>
+          <span style="--i:16"></span>
+          <span style="--i:10"></span>
+        </div>
+
     <div class="nav">
         <ul>
-            <li><button><a href="activity1-profile_info.html">HOME</a></button></li>
-            <li><button><a href="schedule.html">SCHEDULE</a></button></li>
+            <li><a href="activity1-profile_info.html">HOME</a></li>
+            <li><a href="schedule.html">SCHEDULE</a></li>
         </ul>
     </div>
     
@@ -96,6 +132,7 @@
             </tr>
     
         </table>
-
+    </div>
+</div>
 </body>
 </html>
