changed file name in a tag

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <div class="nav">
     <ul>
-        <li><button><a href="activity1-profile_info.html">HOME</a></button></li>
+        <li><button><a href="index.html">HOME</a></button></li>
         <li><button><a href="schedule.html">SCHEDULE</a></button></li>
     </ul>
 </div>
