--- a/schedule.html
+++ b/schedule.html
@@ -49,7 +49,7 @@
 
     <div class="nav">
         <ul>
-            <li><a href="activity1-profile_info.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="schedule.html">SCHEDULE</a></li>
         </ul>
     </div>
