--- a/exam/convert.html
+++ b/exam/convert.html
@@ -19,7 +19,7 @@
 <body>
 
     <label for="convert">Converter</label>
-    <input type="number" name="converter" id="convert"><br><br>
+    <input type="text" name="converter" id="convert"><br><br>
     <button id="kgToLbsBtn">Kg to lbs</button>
     <button id="lbsToKgBtn">lbs to Kg</button><br>
     <span class="answer"></span>
